add the get tweets api
